Adding change for the ganeshji images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="color-scheme" content="light only">
   <meta name="supported-color-schemes" content="light">
   
-  <title>Keerthana & Sahil - Wedding Invitation</title>
+  <title>Sahil & Keerthana - Wedding Invitation</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
@@ -100,8 +100,6 @@
     <div style="position: relative; width: 100%; max-width: 450px; min-width: 350px; aspect-ratio: 1.22; background: url('https://res.cloudinary.com/dox8yqpts/image/upload/v1755779145/Your_paragraph_text_2_mzkvc4.png') no-repeat center center; background-size: contain; display: flex; justify-content: center; align-items: center;">
       <!-- Content Wrapper -->
       <div style="position: absolute; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 10px;">
-        <!-- Logo Image -->
-        <img src="assets/images/logo.png" alt="Wedding Logo" style="width: 140px; height: 140px; object-fit: contain; margin-bottom: 15px;">
         <!-- Text Content -->
         <p style="font-family: 'Yesteryear', cursive; font-size: 2.3rem; margin: 0 0 30px 0; color: #1a1a1a;">You're Invited!</p>
         <button id="popup-enter" style="padding: 12px 20px; font-size: 0.9rem; font-weight: 500; background: #3c4435; border: none; border-radius: 15px; color: white; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease; font-family: 'Rufina', serif;">Discover the details</button>
@@ -120,7 +118,7 @@
 
       
       <div class="hero-content">
-        <h1 id="hero-names" class="hero-names">Keerthana & Sahil</h1>
+        <h1 id="hero-names" class="hero-names">Sahil & Keerthana</h1>
         <img src="assets/images/hero-underline.png" alt="Decorative underline" class="hero-underline" loading="lazy">
         <h2 class="hero-heading">We're getting married!</h2>
         <p class="hero-subtitle">Join us as we begin our forever...</p>
@@ -342,25 +340,6 @@
                     </p>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-    <!-- Organizational Aspects Section -->
-    <section id="organizational-aspects" class="organizational-aspects-section" aria-labelledby="organizational-aspects-title">
-      <div class="container">
-        <!-- Organizational Image with Overlay -->
-        <div class="org-image-container">
-          <div class="org-image-wrapper">
-            <img src="assets/images/org-image.jpeg" alt="Wedding couple" class="org-image" loading="lazy">
-            <div class="org-image-overlay">
-              <div class="org-image-content">
-                <p class="org-phone">We are looking forward to your presence!</p>
               </div>
             </div>
           </div>
